simplify error responses, update tests
